[project]
name = "pgvector-langchain-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.14.1",
    "langchain-cohere>=0.6.0",
    "langchain-core>=1.4.8",
    "langchain-postgres>=0.0.17",
    "pip>=26.1.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
